	preferred extension and is expected in repositories.

    o	boxplot() gains a simple 'matrix' method, enabling boxplot(mat)
	instead of boxplot(data.frame(mat)).

    o	zip.file.extract() gains an optional 'dir' argument.

    o	source() with 'encoding' specified (and not as "unknown") marks
	the encoding of character strings in Latin-1 and UTF-8
	locales.

    o	parse(text=z) now marks the encodiing of character strings in
	Latin-1 and UTF-8 locales if 'z' is of known encoding (that is
	all elements are either ASCII or marked as Latin-1 or UTF-8).

    o	parse_Rd(), an experimental parser for Rd files, has been added.

    o	sprintf() does stricter error checking on input formats to
	avoid passing invalid formats to the OS (which have a tendency
	to crash under such inputs).

    o	expand.grid() gains a 'stringsAsFactor' argument to ask for
	automatic conversion of character vectors to factors (which
	happened for many years but was not previously documented, and
	is no longer the default).

    o	bxp() now coputes the 'ylim' including the outliers only if
	'outline = TRUE'.  (Wish of PR#13196)

    o	barplot() gains a 'args.legend' argument.  (Wish of PR#13265).

    o	RweaveLatexSetup() now accepts all (and not just some) options
	passed through from Sweave()

    o	cumsum(x) and cumprod(x) for double precision x now use a long
	double accumulator where available and so more closely match
	sum() and prod() in potentially being more accurate.

    o	plot() methods for "stepfun" (and hence "ecdf") gain an 'col'
	argument, allowing to set all three colors simultaneously.


DEPRECATED & DEFUNCT

    o	allGenerics() is defunct.

    o	Use of allocVector(CHARSXP ...) is defunct and gives an error.

    o	The compatibility define for graphics structure NewDevDesc in
	GraphicsDevice.h has been removed.

    o	Support for versioned installs (R CMD INSTALL --with-package-versions
	and install.packages(installWithVers = TRUE)) has been removed.


UTILITIES
