@@ -63,9 +63,7 @@ next
   the loop; changing it subsequently does not affect the loop.  The
   variable \code{var} has the same type as \code{seq}, and is read-only:
   assigning to it does not alter \code{seq}.  If \code{seq} is a factor
-  (which is not strictly allowed) then its internal codes are used: the
-  effect is that of \code{\link{as.integer}} not
-  \code{\link{as.vector}}.
+  then it is coerced to a character vector first.
 }
 \value{
   \code{if} returns the value of the expression evaluated, or
@@ -96,6 +94,8 @@ for(n in c(2,5,10,20,50)) {
    x <- stats::rnorm(n)
    cat(n,":", sum(x^2),"\n")
 }
+f = factor(sample(letters[1:5], 10, replace=TRUE))
+for( i in unique(f) ) print(i)
 }
 \keyword{programming}
 \keyword{iteration}
